# pytrends

./: .gitattributes  .gitignore  CONTRIBUTING.md  Google_Trends_API_File.csv  LICENSE  README.md  composer.json  dailydata.py  download.py  example.py  exceptions.py  pyGTrends.py  pyproject.toml  request.py  requirements-dev.txt  requirements.txt  setup.py  test_trendReq.py
.github/workflows/: python-package.yml
docs/: experiments.html  index.html
examples/: example.py  multiple_trends_download.py  multiple_trends_download.py~  multiterm_query.py
experiments/: localtrends.html
pytrends/: __init__.py  compat.py  connect.py  dailydata.py  exceptions.py  get_historical_interest.py  parse.py  pyGTrends.py  pytrends.py  renormalize.py  request.py  test_trendReq.py
tests/: conftest.py  test_request.py  test_trendReq.py
tests/cassettes/test_request/: test_build_payload.yaml  test_initial_data.yaml  test_interest_by_region.yaml  test_interest_by_region_city_resolution.yaml  test_interest_by_region_ok.yaml  test_interest_over_time.yaml  test_interest_over_time_bad_gprop.yaml  test_interest_over_time_froogle.yaml  test_interest_over_time_images.yaml  test_interest_over_time_multiple_regions.yaml  test_interest_over_time_news.yaml  test_interest_over_time_ok.yaml  test_interest_over_time_partial.yaml  test_interest_over_time_youtube.yaml  test_multirange_interest_over_time_ok.yaml  test_multirange_interest_over_time_same_keyword_ok.yaml  test_realtime_trending_searches_ok.yaml  test_related_queries_result_keys.yaml  test_related_queries_result_rising.yaml  test_related_queries_result_top.yaml  test_related_topics_result_keys.yaml  test_related_topics_result_rising.yaml  test_related_topics_result_top.yaml  test_suggestions_ok.yaml  test_tokens.yaml  test_top_charts.yaml  test_top_charts_ok.yaml  test_trending_searches.yaml  test_trending_searches_ok.yaml
