[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytrends"
version = "4.8.0"
description = "Pseudo API for Google Trends"
urls = {homepage = "https://github.com/dreyco676/pytrends"}
requires-python = ">=3.7"
authors = [
    {name = "John Hogue"},
    {name = "Burton DeWilde"},
    {email = "dreyco676@gmail.com"}
]
license = {text = "Apache 2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License"
]
keywords = [
    "google trends api search"
]
dynamic = ["readme", "dependencies"]

[tool.setuptools]
packages = ["pytrends"]

# Taken from https://github.com/pypa/setuptools/blob/d138ec08efc2dbaebb8752e215e324f38bd807a2/setuptools/tests/config/test_pyprojecttoml.py#L68
[tool.setuptools.dynamic.readme]
file = ["README.md"]
content-type = "text/markdown"

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov pytrends/"

[tool.poetry]
name = "pytrends"
version = "4.8.0"
description = "Pseudo API for Google Trends"
authors = [
    "John Hogue",
    "Burton DeWilde"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
responses = "^0.22.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
pytest-recording = "^0.12.1"
pandas = "^1.5.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "*"